feat create user repository
