# src/swagger.json
@@ -75,6 +75,71 @@
        }
 
       }
+    },
+    "/categories/import": {
+      "post": {
+        "tags": ["category"],
+        "summary":"Upload a new category",
+        "description":"Uploada new category",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "string",
+                "properties": {
+                  "file": {
+                    "type":"string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description":"Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description":"Created"
+          },
+          "500": {
+            "description":"Specifications Already Exists!"
+          }
+        }
+      }
+    }
+
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type":"string"
+        },
+        "description": {
+          "type":"string"
+        }
+      }
     }
   }
 }
